--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
   "name": "deepprint-web",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "wrangler pages dev ./dist"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.0",
+    "@monaco-editor/react": "^4.6.0",
+    "@myriaddreamin/typst-ts-renderer": "^0.6.0",
+    "@myriaddreamin/typst-ts-web-compiler": "^0.6.0",
+    "@myriaddreamin/typst.react": "^0.6.0",
+    "@myriaddreamin/typst.ts": "^0.6.0",
     "@tailwindcss/vite": "^4.1.18",
+    "ai": "^4.0.0",
+    "hono": "^4.6.0",
     "lucide-react": "^0.560.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "vite-plugin-static-copy": "^3.2.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241230.0",
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -27,6 +37,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "wrangler": "^3.99.0"
   }
 }
