--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "2.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "sync": "node scripts/update-universe.mjs",
+    "dev": "npm run sync && vite",
+    "build": "npm run sync && vite build",
     "lint": "eslint .",
     "preview": "wrangler pages dev ./dist"
   },
@@ -22,7 +23,8 @@
     "lucide-react": "^0.560.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "vite-plugin-static-copy": "^3.2.0"
+    "vite-plugin-static-copy": "^3.2.0",
+    "giget": "^3.1.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241230.0",
