--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "lucide-react": "^0.560.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "vite-plugin-static-copy": "^3.2.0",
-    "giget": "^3.1.1"
+    "vite-plugin-static-copy": "^3.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241230.0",
@@ -39,6 +38,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "tar": "^7.5.7",
     "vite": "^7.2.4",
     "wrangler": "^3.99.0"
   }
