--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "npm run sync && vite",
     "build": "npm run sync && vite build",
     "lint": "eslint .",
-    "preview": "wrangler pages dev ./dist"
+    "preview": "wrangler pages dev ./dist",
+    "deploy": "npm run build && wrangler pages deploy ./dist"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.0",
